--- a/01/text.html
+++ b/01/text.html
@@ -29,13 +29,50 @@
     <a name="cometa"></a>
     <h2>Комета</h2>
     <p>
-      &laquo;Комета параллельна&raquo;. &lt;Супруги&gt; вступают в брак с
-      жизненными паттернами и уровнями дифференциации Я, унаследованными от их
+      &laquo;Комета параллельна&raquo;. &lt;Супруги&gt; вступают в брак с жизненными
+      паттернами и уровнями дифференциации Я, унаследованными от их
       родительских семей, таким образом правоспособность возможна. Причиненный
       ущерб последовательно начинает платежный документ, это применимо и к
       исключительным правам.
     </p>
     <p>Площадь: 50 m<sup>2</sup></p>
     <p>X<sub>2</sub></p>
+
+    <p>
+      Три девицы под окном<br>
+      Пряли поздно вечерком.<br>
+      «Кабы я была царица, —<br>
+      Говорит одна девица, —<br>
+      То на весь крещеный мир<br>
+      Приготовила б я пир».<br>
+      «Кабы я была царица, —<br>
+      Говорит ее сестрица, —<br>
+      То на весь бы мир одна<br>
+      Наткала я полотна».<br>
+      «Кабы я была царица, —<br>
+      Третья молвила сестрица, —<br>
+      Я б для батюшки-царя<br>
+      Родила богатыря».
+    </p>
+
+    <p>
+      Только вымолвить успела,<br>
+      Дверь тихонько заскрыпела,<br>
+      И в светлицу входит царь,<br>
+      Стороны той государь.<br>
+      Во всё время разговора<br>
+      Он стоял позадь забора;<br>
+      Речь последней по всему<br>
+      Полюбилася ему.<br>
+      «Здравствуй, красная девица, —<br>
+      Говорит он, — будь царица<br>
+      И роди богатыря<br>
+      Мне к исходу сентября.<br>
+      Вы ж, голубушки-сестрицы,<br>
+      Выбирайтесь из светлицы,<br>
+      Поезжайте вслед за мной,<br>
+      Вслед за мной и за сестрой:<br>
+      Будь одна из вас ткачиха,<br>
+      А другая повариха».</p>
   </body>
 </html>
