--- a/04/list.html
+++ b/04/list.html
@@ -20,9 +20,9 @@
     <div class="clearfix">
         <div class="float">a</div>
         <div class="float">b</div>
-        <div class="float clear-both">c</div>
+        <div class="float">c</div>
     </div>
-    
+
     <div>data</div>
 </body>
 </html>
