--- a/pink-donut/index.html
+++ b/pink-donut/index.html
@@ -30,14 +30,61 @@
             <h1>Мы горячие<br>розовые пончики</h1>
             <h2>А не какие-то<br>холодные помидоры</h2>
             <div class="btn-container">
-                <a href="#" class="btn">Далее</a>
+                <a href="#" class="btn">Дальше</a>
             </div>  
             <div class="scroll"></div>
         </div>
     </header>
 
     <section class="cafe-menu">
-        cafe-menu
+        <div class="container">
+            <div class="row center-dash">
+                <div class="col">
+                    <h2 class="underline">Мы лучшие</h2>
+                </div>
+                <div class="col">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae fuga praesentium quisquam necessitatibus sequi cum ducimus dolorum ad, modi voluptatum recusandae, laudantium nihil quod dolorem iusto, vero blanditiis nulla explicabo!
+                    </p>
+                </div>
+            </div>
+            <div class="row cafe-menu-image-list">
+                <div class="col">
+                    <img src="img/donut.png" alt="Пончики">
+                </div>
+                <div class="col">
+                    <img src="img/tea.png" alt="Чай">
+                </div>
+                <div class="col">
+                    <img src="img/cup.png" alt="Кофе">
+                </div>
+            </div>
+            <div class="row cafe-menu-dividers">
+                <div class="col center-dash"></div>
+                <div class="col center-dash"></div>
+                <div class="col center-dash"></div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h3>Пончики</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quae assumenda similique voluptatem, dolorum quos earum numquam quasi asperiores illo.
+                    </p>
+                </div>
+                <div class="col">
+                    <h3>Чай</h3>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus delectus placeat, sapiente assumenda, maxime tempore, rem consequuntur a ullam harum in consequatur corporis accusantium aliquid!
+                    </p>
+                </div>
+                <div class="col">
+                    <h3>Кофе</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dolores dolore corrupti eveniet magnam minus maxime necessitatibus dicta!
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="gallery">
